--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 body {
-  font-family: "renner";
-  color: red;
+  background-color: #F4EBE0;
+  text-align: center;
+  color: #241C1C;
+  overflow: visible;
+  font-family: "Renner";
 }
+
+
+
