--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   background-color: #F4EBE0;
   text-align: center;
-  color: #241C1C;
+  color: #ffffff;
   overflow: visible;
-  font-family: "Renner";
+  font-family: "jones";
 }
 
 
