--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #F4EBE0;
-  text-align: center;
+  text-align: left;
   color: #ffffff;
   overflow: visible;
   font-family: "jones";
