--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   background-color: #F4EBE0;
-  text-align: left;
-  color: #ffffff;
+  text-align: right;
+  color: red;
   overflow: visible;
-  font-family: "jones";
+  font-family: renner;
 }
 
 
