--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #F4EBE0;
+  background-color: Black;
   text-align: center;
-  color: red;
+  color: White;
   overflow: visible;
-  font-family: "Renner", serif;
+  font-family: "renner", serif;
 }
 
 h1 {
