--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   text-align: center;
   color: White;
   overflow: visible;
-  font-family: "renner", serif;
+  font-family: "rennermedium", serif;
 }
 
 h1 {
