--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   text-align: center;
   color: White;
   overflow: visible;
+  font-weight: normal;
   font-family: "rennermedium", serif;
 }
 
