--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body {
  font-family: "renner", sans; 
+ color: #333333;
+ background-color: #E6E6E6;
+}
+
+h1 {
+ line-height: 0.8;
+}
+
+h2 {
+ font-family: "rennermedium", sans;
 }
