--- a/Zeros/style.css
+++ b/Zeros/style.css
@@ -5,4 +5,6 @@ body {
   -webkit-columns: 100% 100; /* Chrome, Safari, Opera */
   -moz-columns: 100% 100; /* Firefox */
   columns: 100% 100;
+  height: 100%;
+  background-color: red;
 }
