--- a/Zeros/style.css
+++ b/Zeros/style.css
@@ -2,9 +2,9 @@ body {
   font-family: 'Roboto Mono', monospace;
   font-size: 1.2em;
   line-height: 2;
-  -webkit-columns: 100% 100; /* Chrome, Safari, Opera */
-  -moz-columns: 100% 100; /* Firefox */
-  columns: 100% 100;
-  height: 100%;
+  -webkit-columns: 90vw 100; /* Chrome, Safari, Opera */
+  -moz-columns: 90vw 100; /* Firefox */
+  columns: 90vw 100;
+  height: 90vh;
   width: 500em;
 }
