--- a/Zeros/style.css
+++ b/Zeros/style.css
@@ -5,6 +5,11 @@ body {
   -webkit-columns: 90vw 100; /* Chrome, Safari, Opera */
   -moz-columns: 90vw 100; /* Firefox */
   columns: 90vw 100;
-  height: 90vh;
-  width: 500em;
+  height: 100vh;
+}
+
+div {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
 }
