--- a/Zeros/style.css
+++ b/Zeros/style.css
@@ -5,12 +5,13 @@ body {
   -webkit-columns: 90vw 100; /* Chrome, Safari, Opera */
   -moz-columns: 90vw 100; /* Firefox */
   columns: 90vw 100;
-  height: 99vh;
+  height: 97vh;
 }
 
 div {
   width: 100%;
   height: 100vh;
   text-align: center;
-  padding-top: 40vh;
+  padding-top: 0;
+  margin-top: 30vh;
 }
