--- a/Zeros/style.css
+++ b/Zeros/style.css
@@ -5,12 +5,12 @@ body {
   -webkit-columns: 90vw 100; /* Chrome, Safari, Opera */
   -moz-columns: 90vw 100; /* Firefox */
   columns: 90vw 100;
-  height: 99vh;
+  height: 97vh;
 }
 
 div {
   width: 100%;
-  height: 99vh;
+  height: 100%;
   text-align: center;
   padding-top: 0;
 }
