--- a/Zeros/style.css
+++ b/Zeros/style.css
@@ -6,10 +6,11 @@ body {
   -moz-columns: 95vw 100; /* Firefox */
   columns: 90vw 100;
   height: 90vh;
+  text-align: center;
 }
 
 p {
-  width: 10em;
+  width: 50em;
 }
 
 div {
