--- a/Zeros/style.css
+++ b/Zeros/style.css
@@ -6,7 +6,6 @@ body {
   -moz-columns: 95vw 100; /* Firefox */
   columns: 90vw 100;
   height: 90vh;
-  text-align: center;
 }
 
 p {
@@ -15,7 +14,7 @@ p {
 
 div {
   height: 100%;
-  width: 100%;
+  width: 100vw;
   text-align: center;
   margin-top: 30vh;
 }
