--- a/style.css
+++ b/style.css
@@ -20,8 +20,10 @@ a {
 }
 
 #hideme {
- background-color: red;
+ background-color: black;
  margin-top: -10px; 
  margin-left: -8px; 
  margin-bottom: -15px;
+ width: 200px;
+ height: 40px;
 }
