--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
- font-family: "renner", sans; 
+ font-family: "Jost", sans; 
  color: #333333;
  background-color: #F2F2F2;
  padding-left: 10%;
@@ -11,8 +11,8 @@ h1 {
 }
 
 h2 {
- font-family: "rennermedium", sans;
- font-weight: normal;
+ font-family: "Jost", sans;
+ font-weight: 500;
 }
 
 a {
