--- a/Alphabet/style.css
+++ b/Alphabet/style.css
@@ -57,6 +57,7 @@ h2 {
 
 #people #A:hover {
   background-image: url("resource/Ah.svg");
+  background-size: 10em 10em;
 }
 
 #people #B {
@@ -65,6 +66,7 @@ h2 {
 
 #people #B:hover {
   background-image: url("resource/Bh.svg");
+  background-size: 10em 10em;
 }
 
 #people #c {
@@ -73,6 +75,7 @@ h2 {
 
 #people #c:hover {
   background-image: url("resource/ch.svg");
+  background-size: 10em 10em;
 }
 
 #people #C {
@@ -81,6 +84,7 @@ h2 {
 
 #people #C:hover {
   background-image: url("resource/Ch.svg");
+  background-size: 10em 10em;
 }
 
 #people #D {
@@ -89,6 +93,7 @@ h2 {
 
 #people #D:hover {
   background-image: url("resource/Dh.svg");
+  background-size: 10em 10em;
 }
 
 #people #E {
@@ -97,6 +102,7 @@ h2 {
 
 #people #E:hover {
   background-image: url("resource/Eh.svg");
+  background-size: 10em 10em;
 }
 
 #people #F {
@@ -105,6 +111,7 @@ h2 {
 
 #people #F:hover {
   background-image: url("resource/Fh.svg");
+  background-size: 10em 10em;
 }
 
 #people #G {
@@ -113,6 +120,7 @@ h2 {
 
 #people #G:hover {
   background-image: url("resource/Gh.svg");
+  background-size: 10em 10em;
 }
 
 #people #H {
@@ -121,6 +129,7 @@ h2 {
 
 #people #H:hover {
   background-image: url("resource/Hh.svg");
+  background-size: 10em 10em;
 }
 
 #people #I {
@@ -129,6 +138,7 @@ h2 {
 
 #people #I:hover {
   background-image: url("resource/Ih.svg");
+  background-size: 10em 10em;
 }
 
 #people #J {
@@ -137,6 +147,7 @@ h2 {
 
 #people #J:hover {
   background-image: url("resource/Jh.svg");
+  background-size: 10em 10em;
 }
 
 #people #K {
@@ -145,6 +156,7 @@ h2 {
 
 #people #K:hover {
   background-image: url("resource/Kh.svg");
+  background-size: 10em 10em;
 }
 
 #people #L {
@@ -153,6 +165,7 @@ h2 {
 
 #people #L:hover {
   background-image: url("resource/Lh.svg");
+  background-size: 10em 10em;
 }
 
 #people #M {
@@ -161,6 +174,7 @@ h2 {
 
 #people #M:hover {
   background-image: url("resource/Mh.svg");
+  background-size: 10em 10em;
 }
 
 #people #N {
@@ -169,6 +183,7 @@ h2 {
 
 #people #N:hover {
   background-image: url("resource/Nh.svg");
+  background-size: 10em 10em;
 }
 
 #people #O {
@@ -177,6 +192,7 @@ h2 {
 
 #people #O:hover {
   background-image: url("resource/Oh.svg");
+  background-size: 10em 10em;
 }
 
 #people #P {
@@ -185,6 +201,7 @@ h2 {
 
 #people #P:hover {
   background-image: url("resource/Ph.svg");
+  background-size: 10em 10em;
 }
 
 #people #Q {
@@ -193,6 +210,7 @@ h2 {
 
 #people #Q:hover {
   background-image: url("resource/Qh.svg");
+  background-size: 10em 10em;
 }
 
 #people #R {
@@ -201,6 +219,7 @@ h2 {
 
 #people #R:hover {
   background-image: url("resource/Rh.svg");
+  background-size: 10em 10em;
 }
 
 #people #S {
@@ -209,6 +228,7 @@ h2 {
 
 #people #S:hover {
   background-image: url("resource/Sh.svg");
+  background-size: 10em 10em;
 }
 
 #people #T {
@@ -217,6 +237,7 @@ h2 {
 
 #people #T:hover {
   background-image: url("resource/Th.svg");
+  background-size: 10em 10em;
 }
 
 #people #U {
@@ -225,6 +246,7 @@ h2 {
 
 #people #U:hover {
   background-image: url("resource/Uh.svg");
+  background-size: 10em 10em;
 }
 
 #people #V {
@@ -233,6 +255,7 @@ h2 {
 
 #people #V:hover {
   background-image: url("resource/Vh.svg");
+  background-size: 10em 10em;
 }
 
 #people #W {
@@ -241,6 +264,7 @@ h2 {
 
 #people #W:hover {
   background-image: url("resource/Wh.svg");
+  background-size: 10em 10em;
 }
 
 #people #X {
@@ -249,6 +273,7 @@ h2 {
 
 #people #X:hover {
   background-image: url("resource/Xh.svg");
+  background-size: 10em 10em;
 }
 
 #people #Y {
@@ -257,6 +282,7 @@ h2 {
 
 #people #Y:hover {
   background-image: url("resource/Yh.svg");
+  background-size: 10em 10em;
 }
 
 #people #Z {
@@ -279,6 +305,7 @@ h2 {
 
 #people #Z:hover {
   background-image: url("resource/Zh.svg");
+  background-size: 10em 10em;
 }
 
 #colorA {
