--- a/mop/style.css
+++ b/mop/style.css
@@ -307,6 +307,9 @@ h2 {
   .left img {
     margin-top: 210px;
   }
+  .left iframe {
+    margin-top: 210px;
+  }
   .left #letter {
     margin-top: 210px;
   }
