--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -13,7 +13,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Drafting";
+  font-family: "Drafting", sans-serif;
 }
 
 img {
@@ -49,7 +49,7 @@ h2 {
   text-transform: lowercase;
   font-variant: small-caps;
   margin-left: calc(50vw - 500px);
-  text-shadow: 3px  3px 15px #fff, -3px -3px 15px #fff;
+  text-shadow: 5px  5px 30px #fff, 0  0 20px #fff, -5px  -5px 30px #fff;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -81,4 +81,14 @@ p {
   filter: brightness(95%);
   z-index: -1;
   position:relative;
+}
+
+#blackout {
+  background-color: black;
+  cursor: pointer;
+}
+
+#blackout2 {
+  background-color: black;
+  cursor: pointer;
 }
