--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -51,8 +51,11 @@ h2 {
   text-transform: lowercase;
   font-variant: small-caps;
   margin-left: calc(50vw - 500px);
-  background-color: white;
-  width: fit-content;
+}
+
+mark {
+  background: linear-gradient(0deg, white 0%, white 83%, rgba(255,255,255,0) 83%);
+  margin-top: -20px;
 }
 
 @media only screen and (max-width: 1000px) {
