--- a/crossword/style.css
+++ b/crossword/style.css
@@ -213,3 +213,37 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
+
+table#crosswordPicker {
+	border-collapse: collapse;
+	width: 500px;
+	height: 500px;
+	box-shadow: 6px 6px #15141e;
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+table#crosswordPicker td {
+	border: 2px solid #15141e;
+	text-align: center;
+	text-transform: lowercase;
+	font-variant: small-caps;
+	font-size: 50px;
+	font-weight: 400;
+	width: 20%;
+	height: 20%;
+}
+
+table#crosswordPicker td:hover {
+	background-color: #fff5b1;
+}
+
+#explain p {
+	width: 620px;
+	font-size: 20px;
+	line-height: 1.5em;
+	margin: auto;
+	margin-top: 0;
+	margin-bottom: 0;
+}
