--- a/crossword/style.css
+++ b/crossword/style.css
@@ -261,6 +261,7 @@ button {
 	padding-right: 0.5em;
 	transition: box-shadow 0.3s;
 	transition-timing-function: ease-out;
+	font-family: Drafting;
 }
 
 button:hover {
